# traffik

./: .gitignore  CMakeLists.txt  License.txt  README.md  go.mod
cpp/: CMakeLists.txt  Dockerfile  docker-compose.yml
cpp/data/input/: tfk_clients_config.json
cpp/src/: main.cc  tfk_common.h
cpp/src/tfk_clients/: tfk_clients.cc  tfk_clients.h
cpp/src/tfk_logger/: tfk_logger.cc  tfk_logger.h
cpp/src/tfk_servers/: tfk_servers.cc  tfk_servers.h
data/input/: tfk_clients_config.json  tfk_servers_config.json
go/: Dockerfile_go  docker-compose.yml  go.mod  main.go
go/data/input/: tfk_servers_config.json
go/main/: main.go
go/test/: main.go
go/tfk_clients/: go.mod  main.go
go/tfk_clients/client/: client.go  client_test.go  config.go
go/tfk_clients/main/: main.go
go/tfk_logger/: logger.go  logger_test.go  main.go  tfk_logger.go
go/tfk_logger/logger/: logger.go  logger_test.go
go/tfk_logger/main/: main.go
go/tfk_servers/: main.go
go/tfk_servers/main/: main.go
go/tfk_servers/server/: config.go  server.go  server_test.go
workspace/traffik/: CMakeLists.txt  main.cc  tfk_clients.cc  tfk_logger.cc  tfk_logger.h  tfk_servers.cc
workspace/traffik/cpp/src/: main.cc  tfk_common.h
workspace/traffik/cpp/src/tfk_clients/: tfk_clients.cc  tfk_clients.h
workspace/traffik/cpp/src/tfk_logger/: tfk_logger.h
workspace/traffik/cpp/src/tfk_servers/: tfk_servers.cc  tfk_servers.h
